--- a/gs.css
+++ b/gs.css
@@ -91,3 +91,24 @@
      background-color: cyan;
      padding: 10px;
 }
+
+table{
+    border: 1px solid black;
+    margin-left: 500px;
+    margin-top: 50px;
+}
+
+th{
+    border: 1px solid black;
+    background-color: aquamarine;
+    padding: 10px;
+}
+
+td{
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+}
+
+tr:nth-child(odd) {background-color: blanchedalmond;}
+
