--- a/gs.css
+++ b/gs.css
@@ -116,3 +116,31 @@ tr:nth-child(odd) {background-color: blanchedalmond;}
     text-shadow: 4px 4px 4px blueviolet;
     border: 3px solid black;
 }
+
+ul{
+    list-style-type: none;
+    margin-top: 15px;
+    padding: 0;
+    overflow: hidden;
+    background-color: brown;
+}
+
+.nav-item-prev{
+    float: left;
+}
+
+.nav-item-next{
+    float: right;
+}
+
+li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 15px 20px;
+    text-decoration: none;
+}
+
+li a:hover{
+    background-color: red;
+}
